--- a/episodes/season_02.yml
+++ b/episodes/season_02.yml
@@ -3,7 +3,7 @@ episodes:
 - title: Bart Gets an F
   season: 2
   episode: 1
-  release_date:
+  release_date: 1990-10-11
   description: Bart must pass a critical history test or he will be held back a grade.
   disneyplus_id: 4050d194-f1a6-47d4-bc1b-76b8245ed113
   simpsonsworld_id: 260539459671
@@ -12,7 +12,7 @@ episodes:
 - title: Simpson and Delilah
   season: 2
   episode: 2
-  release_date:
+  release_date: 1990-10-18
   description: Homer's life changes dramatically when he purchases a miracle hair
     growth formula.
   disneyplus_id: 243f60de-a36e-49ad-add0-dfc14531cafd
@@ -22,7 +22,7 @@ episodes:
 - title: Treehouse of Horror
   season: 2
   episode: 3
-  release_date:
+  release_date: 1990-10-25
   description: The Simpsons tell three bloodcurdling tales of horror on Halloween
     night.
   disneyplus_id: 4ec3dd31-0428-40c2-b1e0-b052dfc53fe0
@@ -32,7 +32,7 @@ episodes:
 - title: Two Cars in Every Garage and Three Eyes on Every Fish
   season: 2
   episode: 4
-  release_date:
+  release_date: 1990-11-01
   description: Homer supports Mr. Burns in his bid for governor, but Marge remains
     loyal to Burns's political opposition.
   disneyplus_id: de06551c-30d7-44ef-b000-05e29c00eed6
@@ -42,7 +42,7 @@ episodes:
 - title: Dancin' Homer
   season: 2
   episode: 5
-  release_date:
+  release_date: 1990-11-08
   description: Homer becomes the official mascot for a major league baseball team.
   disneyplus_id: ebf614c8-eefe-4cc3-8b26-d898f40faad0
   simpsonsworld_id: 260538435888
@@ -51,7 +51,7 @@ episodes:
 - title: Dead Putting Society
   season: 2
   episode: 6
-  release_date:
+  release_date: 1990-11-15
   description: Homer and Ned Flanders pressure their sons to win a miniature golf
     championship.
   disneyplus_id: 142af74a-1149-493c-ad2b-a283c98db66d
@@ -61,7 +61,7 @@ episodes:
 - title: Bart vs. Thanksgiving
   season: 2
   episode: 7
-  release_date:
+  release_date: 1990-11-22
   description: Bart learns the true meaning of Thanksgiving when he runs away from
     home after having an argument with Lisa.
   disneyplus_id: f4dc6ce1-cb9d-49e3-b4d4-2e5f50549812
@@ -71,7 +71,7 @@ episodes:
 - title: Bart the Daredevil
   season: 2
   episode: 8
-  release_date:
+  release_date: 1990-12-06
   description: Bart is determined to leap a gorge on his skateboard after witnessing
     the death defying stunts of a real daredevil.
   disneyplus_id: 9f790394-88b9-48ac-970c-18d32de46342
@@ -81,7 +81,7 @@ episodes:
 - title: Itchy and Scratchy and Marge
   season: 2
   episode: 9
-  release_date:
+  release_date: 1990-12-20
   description: Marge initiates a protest movement against gratuitous violence on television
     when Maggie begins acting aggressively after viewing Itchy and Scratchy cartoons.
   disneyplus_id: fd366e91-bcd5-4629-83d9-6c6f6739897c
@@ -91,7 +91,7 @@ episodes:
 - title: Bart Gets Hit by a Car
   season: 2
   episode: 10
-  release_date:
+  release_date: 1991-01-10
   description: When Mr. Burns hits Bart with his car, Homer is enticed by a disreputable
     lawyer to sue him.
   disneyplus_id: bf571705-b52b-46ae-a9c1-c88d36672839
@@ -101,7 +101,7 @@ episodes:
 - title: One Fish, Two Fish, Blowfish, Blue Fish
   season: 2
   episode: 11
-  release_date:
+  release_date: 1991-01-24
   description: Homer believes he has only twenty-four hours to live after he eats
     an improperly prepared blowfish.
   disneyplus_id: 28244e58-a5dd-4260-a8be-13e2a34d0ba9
@@ -111,7 +111,7 @@ episodes:
 - title: The Way We Was
   season: 2
   episode: 12
-  release_date:
+  release_date: 1991-01-31
   description: Marge recounts to her children how she and Homer first met and fell
     in love.
   disneyplus_id: 1fd08344-aa39-42f3-a056-662aa4835f0f
@@ -121,7 +121,7 @@ episodes:
 - title: Homer vs. Lisa and the 8th Commandment
   season: 2
   episode: 13
-  release_date:
+  release_date: 1991-02-07
   description: Lisa disapproves when Homer has cable television installed illegally
     into their home.
   disneyplus_id: fb653641-23b8-4e9b-a547-0d195f78c33c
@@ -131,7 +131,7 @@ episodes:
 - title: Principal Charming
   season: 2
   episode: 14
-  release_date:
+  release_date: 1991-02-14
   description: Homer arranges a date between Principal Skinner and Marge's sister,
     Selma.
   disneyplus_id: ce071635-1151-49b0-9168-eda9b55880fa
@@ -141,7 +141,7 @@ episodes:
 - title: Oh Brother, Where Art Thou?
   season: 2
   episode: 15
-  release_date:
+  release_date: 1991-02-21
   description: Homer locates his long lost half brother Herb and discovers that he
     is rich.
   disneyplus_id: 78ae94ea-6ac6-4d34-b1a9-031a324f447a
@@ -151,7 +151,7 @@ episodes:
 - title: Bart's Dog Gets an F
   season: 2
   episode: 16
-  release_date:
+  release_date: 1991-03-07
   description: Bart must help train Santa's Little Helper to pass an obedience course
     or Homer will give the dog away.
   disneyplus_id: ab2e3441-cb90-4cee-ab57-6f20fa1bfdac
@@ -161,7 +161,7 @@ episodes:
 - title: Old Money
   season: 2
   episode: 17
-  release_date:
+  release_date: 1991-03-28
   description: Grampa Simpson falls in love... and inherits a fortune.
   disneyplus_id: b847307a-cb9d-494a-bb98-12a764168288
   simpsonsworld_id: 263504963955
@@ -170,7 +170,7 @@ episodes:
 - title: Brush with Greatness
   season: 2
   episode: 18
-  release_date:
+  release_date: 1991-04-11
   description: Marge renews her interest in becoming an artist after Homer finds an
     old painting of Ringo Starr in the attic.  Mr. Burns commissions Marge to paint
     a portrait of him.
@@ -181,7 +181,7 @@ episodes:
 - title: Lisa's Substitute
   season: 2
   episode: 19
-  release_date:
+  release_date: 1991-04-25
   description: Lisa develops a crush on her substitute teacher, Mr. Bergstrom.  Bergstrom
     tells Homer he must learn to act as a positive role model for his daughter.
   disneyplus_id: 33c5ea7a-09ac-4513-b471-29289dbbc1f9
@@ -191,7 +191,7 @@ episodes:
 - title: The War of the Simpsons
   season: 2
   episode: 20
-  release_date:
+  release_date: 1991-05-02
   description: Marge insists Homer accompany her for a weekend of marriage counseling
     at a wooded retreat, but Homer takes advantage of the location to attempt to catch
     a legendary catfish.
@@ -202,7 +202,7 @@ episodes:
 - title: Three Men and a Comic Book
   season: 2
   episode: 21
-  release_date:
+  release_date: 1991-05-09
   description: Bart and his friends pool their money to purchase the first issue of
     "Radioactive Man" comics, but then cannot decide who gets to keep it.
   disneyplus_id: a1394377-1c23-458d-b91b-18ff12018d47
@@ -212,7 +212,7 @@ episodes:
 - title: Blood Feud
   season: 2
   episode: 22
-  release_date:
+  release_date: 1991-06-11
   description: Homer expects a generous gift in return when he donates Bart's blood
     to an ailing Mr. Burns.
   disneyplus_id: cd94c4b6-8f87-4df0-b709-190eb4f84964
