--- a/episodes/season_04.yml
+++ b/episodes/season_04.yml
@@ -3,7 +3,7 @@ episodes:
 - title: Kamp Krusty
   season: 4
   episode: 1
-  release_date:
+  release_date: 1992-09-24
   description: Bart and Lisa are horrified when their summer at Kamp Krusty turns
     into a nightmare.
   disneyplus_id: 326e39c2-45a8-4781-9931-438ccbcc7f0a
@@ -13,7 +13,7 @@ episodes:
 - title: A Streetcar Named Marge
   season: 4
   episode: 2
-  release_date:
+  release_date: 1992-10-01
   description: When Marge lands the role of Blanche in a local production of "A Streetcar
     Named Desire," Homer cannot hide his disinterest.
   disneyplus_id: 0e1f575c-eb6e-46d3-8765-d786c3cbe0fc
@@ -23,7 +23,7 @@ episodes:
 - title: Homer the Heretic
   season: 4
   episode: 3
-  release_date:
+  release_date: 1992-10-08
   description: Homer creates his own religion as a means of escaping church services
     on Sundays.
   disneyplus_id: 1aac9cd6-a6d9-49ea-9ae3-fb1622a811fa
@@ -33,7 +33,7 @@ episodes:
 - title: Lisa the Beauty Queen
   season: 4
   episode: 4
-  release_date:
+  release_date: 1992-10-15
   description: Homer enters Lisa in a beauty pageant when her self-esteem plummets.
   disneyplus_id: 2f06393f-b88c-46b7-bddb-65bdf8172d44
   simpsonsworld_id: 273537603930
@@ -42,7 +42,7 @@ episodes:
 - title: Treehouse of Horror III
   season: 4
   episode: 5
-  release_date:
+  release_date: 1992-10-29
   description: During a Halloween party, the Simpsons tell three horrifying tales
     of the macabre.
   disneyplus_id: 540e1a2c-051a-4f48-b5f0-585138090af5
@@ -52,7 +52,7 @@ episodes:
 - title: 'Itchy and Scratchy: The Movie'
   season: 4
   episode: 6
-  release_date:
+  release_date: 1992-11-03
   description: Homer forbids his son from seeing a new movie about his favorite cartoon
     heroes as punishment for misbehaving.
   disneyplus_id: 8c17cbd3-960b-4157-9792-8d02f0098c59
@@ -62,7 +62,7 @@ episodes:
 - title: Marge Gets a Job
   season: 4
   episode: 7
-  release_date:
+  release_date: 1992-11-05
   description: When the foundation to the Simpsons' house is need of an expensive
     repair, Marge takes a position at the power plant where Homer works.
   disneyplus_id: 5d3a5020-24d8-40a9-b0b3-44fa32517226
@@ -72,7 +72,7 @@ episodes:
 - title: New Kid on the Block
   season: 4
   episode: 8
-  release_date:
+  release_date: 1992-11-12
   description: Bart falls in love with the girl who moves in next door, only to find
     that she prefers the school bully.
   disneyplus_id: ca3bcaa1-7de1-4a36-b493-92db5ade62a6
@@ -82,7 +82,7 @@ episodes:
 - title: Mr. Plow
   season: 4
   episode: 9
-  release_date:
+  release_date: 1992-11-19
   description: Homer and Barney vie for Springfield's lucrative snow plowing business.
   disneyplus_id: 4534ec67-6d1f-48ad-b286-43e1cc108d3c
   simpsonsworld_id: 273544259768
@@ -91,7 +91,7 @@ episodes:
 - title: Lisa's First Word
   season: 4
   episode: 10
-  release_date:
+  release_date: 1992-12-03
   description: Marge recounts how Lisa first spoke as the family awaits baby Maggie's
     first word.
   disneyplus_id: 0cf6e0b2-0c75-4106-93a2-efc89238c60c
@@ -101,7 +101,7 @@ episodes:
 - title: Homer's Triple Bypass
   season: 4
   episode: 11
-  release_date:
+  release_date: 1192-12-17
   description: Homer suffers a heart attack and hires Dr. Nick Riviera to perform
     a delicate triple bypass operation.
   disneyplus_id: 2299137d-d5f0-4488-8b35-bfcd5e15dedd
@@ -111,7 +111,7 @@ episodes:
 - title: Marge vs. the Monorail
   season: 4
   episode: 12
-  release_date:
+  release_date: 1993-01-14
   description: An unscrupulous profiteer sells the people of Springfield on a defective
     monorail system, with Homer as the conductor.
   disneyplus_id: fc04c428-5f24-4c42-a419-1d1dda6db8dd
@@ -121,7 +121,7 @@ episodes:
 - title: Selma's Choice
   season: 4
   episode: 13
-  release_date:
+  release_date: 1993-01-21
   description: Selma decides to take her dead aunt's advice and have children before
     it is too late.
   disneyplus_id: f2c8d63e-df66-419c-af18-5500e71f6d77
@@ -131,7 +131,7 @@ episodes:
 - title: Brother from the Same Planet
   season: 4
   episode: 14
-  release_date:
+  release_date: 1993-02-04
   description: Bart tires of Homer's lack of interest in him and chooses another father
     from the Bigger Brother program.  Lisa struggles to kick the habit of dialing
     a 900 number.
@@ -142,7 +142,7 @@ episodes:
 - title: I Love Lisa
   season: 4
   episode: 15
-  release_date:
+  release_date: 1993-02-11
   description: Lisa feels pity for Ralph, a nerdy classmate, and gives him a card
     on Valentine's Day. But to her horror, Ralph develops a crush on her.
   disneyplus_id: 24614fa3-99fe-4898-9dff-80ef324eb72f
@@ -152,7 +152,7 @@ episodes:
 - title: Duffless
   season: 4
   episode: 16
-  release_date:
+  release_date: 1993-02-18
   description: Marge convinces Homer he may have a drinking problem. Lisa plots to
     humiliate Bart with her science project after he ruins an experiment.
   disneyplus_id: 3bb045c7-34fd-45cb-98c2-b72e8db1ccba
@@ -162,7 +162,7 @@ episodes:
 - title: Last Exit to Springfield
   season: 4
   episode: 17
-  release_date:
+  release_date: 1993-03-11
   description: Homer is elected union leader at the power plant and tries to save
     the dental plan so he will not have to pay for Lisa's new braces.
   disneyplus_id: e8b46e3c-2e23-42b8-aed6-136763d57c71
@@ -172,7 +172,7 @@ episodes:
 - title: 'So It''s Come to This: A Simpsons Clip Show'
   season: 4
   episode: 18
-  release_date:
+  release_date: 1993-04-01
   description: Family and friends reminisce about Homer's life after Bart's April
     Fools' Day prank sends him to the hospital.
   disneyplus_id: db1dbdfe-ce8d-4bd5-8471-68c776549ac1
@@ -182,7 +182,7 @@ episodes:
 - title: The Front
   season: 4
   episode: 19
-  release_date:
+  release_date: 1993-04-15
   description: Using Grandpa as a front, Lisa and Bart write their own "Itchy and
     Scratchy" cartoons.
   disneyplus_id: a5a0f5e2-1972-4360-8ec3-7c1374319a1a
@@ -192,7 +192,7 @@ episodes:
 - title: Whacking Day
   season: 4
   episode: 20
-  release_date:
+  release_date: 1993-04-29
   description: Lisa seeks to end a local holiday in which snakes are chased into town
     and beaten with sticks.  Bart is expelled from school by Principal Skinner.
   disneyplus_id: 9ccf6860-afd1-4db1-8ea7-afe4f5dcbde9
@@ -202,7 +202,7 @@ episodes:
 - title: Marge in Chains
   season: 4
   episode: 21
-  release_date:
+  release_date: 1993-05-06
   description: Marge is jailed when she is convicted of stealing from Apu's convenience
     store.
   disneyplus_id: d02ae0e2-fcf2-43c0-b34a-372808d5dfd2
@@ -212,7 +212,7 @@ episodes:
 - title: Krusty Gets Kancelled
   season: 4
   episode: 22
-  release_date:
+  release_date: 1993-05-13
   description: Bart, Lisa and a group of celebrities help Krusty turn his career around
     after his television show is canceled.
   disneyplus_id: 5c868b0d-b9d4-48a7-b40a-1027f81154db
