--- a/episodes/season_06.yml
+++ b/episodes/season_06.yml
@@ -3,7 +3,7 @@ episodes:
 - title: Bart of Darkness
   season: 6
   episode: 1
-  release_date:
+  release_date: 1994-09-04
   description: Bart believes he witnessed Ned Flanders murder his wife.  Lisa's popularity
     soars after her family buys a swimming pool during a heat wave.
   disneyplus_id: e0db43b4-b127-4792-9ba6-caf3fdba9189
@@ -13,7 +13,7 @@ episodes:
 - title: Lisa's Rival
   season: 6
   episode: 2
-  release_date:
+  release_date: 1994-09-11
   description: Lisa becomes jealous when she meets a new student who is even more
     intelligent than herself.  Homer acquires a truckload of white sugar, thinking
     it will net him a fortune.
@@ -24,7 +24,7 @@ episodes:
 - title: Another Simpsons Clip Show
   season: 6
   episode: 3
-  release_date:
+  release_date: 1994-09-25
   description: When Marge suspects that romance has gone out of her life, her family
     recalls romantic encounters from their past.
   disneyplus_id: feda9375-d929-429a-9435-b1cd5d101222
@@ -34,7 +34,7 @@ episodes:
 - title: Itchy and Scratchy Land
   season: 6
   episode: 4
-  release_date:
+  release_date: 1994-10-02
   description: The Simpsons visit a theme park based on the gratuitously violent Itchy
     and Scratchy cartoons.
   disneyplus_id: 916ceda9-c787-4d02-9b7f-dc39a0840d5d
@@ -44,7 +44,7 @@ episodes:
 - title: Sideshow Bob Roberts
   season: 6
   episode: 5
-  release_date:
+  release_date: 1994-10-09
   description: Sideshow Bob runs for political office after Mayor Quimby pardons him
     from prison.
   disneyplus_id: 40520eb0-dffb-4f80-bb22-2ddb42f54b0c
@@ -54,7 +54,7 @@ episodes:
 - title: Treehouse of Horror V
   season: 6
   episode: 6
-  release_date:
+  release_date: 1994-10-30
   description: The Simpsons spin three tales of Halloween horror.
   disneyplus_id: 956d5f58-9674-4f76-88de-b113d2318202
   simpsonsworld_id: 299597891663
@@ -63,7 +63,7 @@ episodes:
 - title: Bart's Girlfriend
   season: 6
   episode: 7
-  release_date:
+  release_date: 1994-11-06
   description: Bart falls in love with Reverend Lovejoy's beautiful daughter, only
     to discover that she is more of a hellion than he is.
   disneyplus_id: 62d263db-6b8c-4654-beda-040484e7235e
@@ -73,7 +73,7 @@ episodes:
 - title: Lisa on Ice
   season: 6
   episode: 8
-  release_date:
+  release_date: 1994-11-13
   description: Lisa joins a hockey team and finds herself pitted against Bart in a
     critical game.
   disneyplus_id: e45f5161-1e73-455f-82ac-48e3d03a7e12
@@ -83,7 +83,7 @@ episodes:
 - title: Homer Badman
   season: 6
   episode: 9
-  release_date:
+  release_date: 1994-11-27
   description: Homer is wrongly accused of committing sexual harassment.
   disneyplus_id: 48565484-149b-48f2-a05e-ebcd9b121782
   simpsonsworld_id: 275746883653
@@ -92,7 +92,7 @@ episodes:
 - title: Grampa vs. Sexual Inadequacy
   season: 6
   episode: 10
-  release_date:
+  release_date: 1994-12-04
   description: While selling a homemade tonic guaranteed to increase sexual desire
     in men, Grampa reveals that Homer's conception was accidental.
   disneyplus_id: 7b7cd73e-4de3-40e8-bcbd-f7cee25bfa6f
@@ -102,7 +102,7 @@ episodes:
 - title: Fear of Flying
   season: 6
   episode: 11
-  release_date:
+  release_date: 1994-12-18
   description: Marge seeks professional help from a psychiatrist after realizing she
     is afraid to fly.
   disneyplus_id: 8575c33f-e73d-40a8-8fa2-c91b65a9710f
@@ -112,7 +112,7 @@ episodes:
 - title: Homer the Great
   season: 6
   episode: 12
-  release_date:
+  release_date: 1995-01-08
   description: Homer's popularity skyrockets when he is chosen as the leader of a
     secret organization.
   disneyplus_id: d02227b3-65fd-4fa1-ad78-3a4d72fe1254
@@ -122,7 +122,7 @@ episodes:
 - title: And Maggie Makes Three
   season: 6
   episode: 13
-  release_date:
+  release_date: 1995-01-22
   description: Homer recounts how Maggie's accidental birth changed his life forever.
   disneyplus_id: beb15b6c-0732-45f6-9455-ee8336f45f1d
   simpsonsworld_id: 278796867754
@@ -131,7 +131,7 @@ episodes:
 - title: Bart's Comet
   season: 6
   episode: 14
-  release_date:
+  release_date: 1995-02-05
   description: Bart discovers a comet that is on a collision course with Springfield.
   disneyplus_id: ab06e7e0-8658-45f0-9e61-49e2a2a3f6cd
   simpsonsworld_id: 275746883888
@@ -140,7 +140,7 @@ episodes:
 - title: Homie the Clown
   season: 6
   episode: 15
-  release_date:
+  release_date: 1995-02-12
   description: Homer enrolls in a clown college franchised by Krusty the Clown.
   disneyplus_id: 30a62635-7272-43d6-887a-d323236b492a
   simpsonsworld_id: 279723587611
@@ -149,7 +149,7 @@ episodes:
 - title: Bart vs. Australia
   season: 6
   episode: 16
-  release_date:
+  release_date: 1995-02-19
   description: Bart must apologize to the country of Australia after he tricks a boy
     from down under into accepting an expensive collect call.
   disneyplus_id: 646ad7b7-2623-459e-9544-ded1ccaf6094
@@ -159,7 +159,7 @@ episodes:
 - title: Homer vs. Patty and Selma
   season: 6
   episode: 17
-  release_date:
+  release_date: 1995-02-26
   description: Homer is forced to borrow money from Patty and Selma after he wipes
     out the family's savings by investing in pumpkins.
   disneyplus_id: 2fa7626b-eabb-46b0-81e5-b9cb333b56f3
@@ -169,7 +169,7 @@ episodes:
 - title: A Star Is Burns
   season: 6
   episode: 18
-  release_date:
+  release_date: 1995-03-05
   description: Homer grows jealous after Marge asks critic Jay Sherman to co-judge
     Springfield's film festival.
   disneyplus_id: 4f4aaa93-bfde-443c-9024-9cd1f217fced
@@ -179,7 +179,7 @@ episodes:
 - title: Lisa's Wedding
   season: 6
   episode: 19
-  release_date:
+  release_date: 1995-03-19
   description: A fortune teller describes how a genteel Englishman will ask for Lisa's
     hand in marriage in the year 2010.
   disneyplus_id: 9708a302-1343-4bbb-ba23-5a96255d8289
@@ -189,7 +189,7 @@ episodes:
 - title: Two Dozen and One Greyhounds
   season: 6
   episode: 20
-  release_date:
+  release_date: 1995-04-09
   description: Bart and Lisa attempt to rescue 25 greyhound puppies from Mr. Burns,
     who wants to use their hides for a new tuxedo.
   disneyplus_id: b598df88-303d-4588-8cdc-08a6a1f1692d
@@ -199,7 +199,7 @@ episodes:
 - title: The PTA Disbands
   season: 6
   episode: 21
-  release_date:
+  release_date: 1995-04-16
   description: Bart masterminds a teacher's strike, but is humiliated when Marge takes
     charge of his class.
   disneyplus_id: c00d65d6-2343-4870-bd41-3cbd2660273a
@@ -209,7 +209,7 @@ episodes:
 - title: "'Round Springfield"
   season: 6
   episode: 22
-  release_date:
+  release_date: 1995-04-30
   description: Lisa is saddened by the death of blues great Bleeding Gums Murphy.  Bart
     ingests a piece of jagged metal while eating Krusty-O cereal.
   disneyplus_id: a1d3d5ef-5c31-422e-8e6e-23f0c8d7dbea
@@ -219,7 +219,7 @@ episodes:
 - title: The Springfield Connection
   season: 6
   episode: 23
-  release_date:
+  release_date: 1995-05-07
   description: Marge joins the police force.
   disneyplus_id: 055a8934-53ff-46e0-bd72-709db2c17b5a
   simpsonsworld_id: 305689155572
@@ -228,7 +228,7 @@ episodes:
 - title: Lemon of Troy
   season: 6
   episode: 24
-  release_date:
+  release_date: 1995-05-14
   description: Bart and his friends march on Shelbyville when Springfield's lemon
     tree is stolen by a gang of children from across the border.
   disneyplus_id: 02037b88-c8d8-4512-9ca3-08cfe7eba3c6
@@ -238,7 +238,7 @@ episodes:
 - title: Who Shot Mr. Burns? (Part One)
   season: 6
   episode: 25
-  release_date:
+  release_date: 1995-05-21
   description: Just about everyone in Springfield vows to kill Mr. Burns after he
     cheats the elementary school out of a newly discovered oil well and threatens
     to block out the sun.
